Fri Feb 13 08:16:11 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (parse_regx): handle \s before read_escape().

	* parse.y (read_escape): `\s' in strings as space.

Tue Feb 10 17:29:08 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b7 released.

	* string.c (str_aset): string insertion by `str[n] = str2'.

	* string.c (str_oct): does recognize `0x'.

 	* sprintf.c (f_sprintf): use baes 10 for conversion from string to
 	  integer.

Mon Feb  9 14:51:56 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* numeric.c (do_coerce): proper error message.

	* string.c (str_sum): bug - masked by wrong value. (sigh..)

Sat Feb  7 15:11:14 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_empty): new method

Fri Feb  6 01:42:15 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* time.c (time_asctime): use asctime(3), not strftime(3).

Thu Feb  5 18:58:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_fptr_close): do not free path on close().

	* array.c (ary_filter): new method.

	* enum.c (enum_each_with_index): new method.

Thu Feb  5 14:10:35 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (primary): singleton class def can be appeared inside
 	  method bodies.

	* hash.c (hash_replace): replace content.

	* string.c (str_replace_method): replace content.

	* array.c (ary_replace_method): replace elements.

	* string.c (str_succ_bang): String#succ!

Thu Feb  5 18:20:30 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* string.c (str_upcase_bang): multi byte character support.

Wed Feb  4 13:55:26 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* array.c (ary_reverse): SEGV on empty array reverse.

Tue Feb  3 12:24:07 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* re.c (match_to_a): non matching element should be nil.

	* ruby.c (ruby_load_script): load script after all initialization.

	* bignum.c (str2inum): need to interpret prefix `0' of `0x'.
